fire: :white_check_mark:fire new

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!--En esta columna se cre el primer espacio para la foto-->
                 <div class="colm11">
 <!--Foto-->
-                    <img id="fotomia" src="./Dia2/imagenes/FotoPerfil.jpg" alt="" width="250" height="250" >
+                    <img id="fotomia" src="Dia2/imagenes/FotoPerfil.jpeg" alt="" width="250" height="250" >
 
                 </div>
 <!--Se crea el segundo recuadro de la columna 1-->
