feat: :fire:new README.md

--- a/Dia7/index.html
+++ b/Dia7/index.html
@@ -34,7 +34,8 @@
                 <div>
                     <pre>
 <h1 class="Fond">
-Comprar Tarjeta          <a>Ver Saldo</a>
+Comprar Tarjeta          <a href="http://127.0.0.1:5500/Dia7/index2.html">Ver Saldo</a>
+<a href=""></a>
      ____________
 </h1>
                     </pre>
