--- a/Dia7/index2.html
+++ b/Dia7/index2.html
@@ -35,7 +35,7 @@
                 <div>
                     <pre>
 <h1 class="Fond">
-<a  href="index1.html" class="link">Comprar Tarjeta </a>         Ver Saldo
+<a  href="http://127.0.0.1:5500/Dia7/index2.html" class="link">Comprar Tarjeta </a>         Ver Saldo
                                             _______
                     </pre>
 
